Added more file parsing.